tests/perf/components/telemetry/deploy/mockserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mockserver
  name: mockserver
  namespace: mockserver
spec:
  ports:
  - name: serviceport
    port: 1080
    targetPort: serviceport
  selector:
    app: mockserver
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mockserver
  name: mockserver
  namespace: mockserver
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mockserver
  template:
    metadata:
      labels:
        app: mockserver
      name: mockserver
    spec:
      containers:
      - env:
        - name: LOG_LEVEL
          value: INFO
        - name: SERVER_PORT
          value: "1080"
        image: eu.gcr.io/kyma-project/external/mockserver/mockserver:mockserver-5.11.2
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: serviceport
          timeoutSeconds: 1
        name: mockserver
        ports:
        - containerPort: 1080
          name: serviceport
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          initialDelaySeconds: 2
          periodSeconds: 2
          successThreshold: 1
          tcpSocket:
            port: serviceport
          timeoutSeconds: 1
        resources: {}
        securityContext:
          readOnlyRootFilesystem: false
          runAsUser: 65534
        volumeMounts:
        - mountPath: /config
          name: config-volume
        - mountPath: /libs
          name: libs-volume
      volumes:
      - configMap:
          name: mockserver-config
        name: config-volume
      - configMap:
          name: mockserver-config
        name: libs-volume
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mockserver
  namespace: mockserver
spec:
  gateways:
  - kyma-gateway.kyma-system.svc.cluster.local
  hosts:
  - mockserver.rg-1.berlin.shoot.canary.k8s-hana.ondemand.com
  http:
  - name: good
    match:
    - uri:
        prefix: /good
    - uri:
        prefix: /
    rewrite:
      uri: /good
    route:
    - destination:
        host: mockserver.mockserver.svc.cluster.local
        port:
          number: 1080
  - name: bad
    match:
    - uri:
        prefix: /bad
    rewrite:
      uri: /bad
    route:
    - destination:
        host: mockserver.mockserver.svc.cluster.local
        port:
          number: 1080
